part1/exercise-107/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: log-output-service
  name: log-output-service
  namespace: log-output
spec:
  ports:
    - name: 80-8000
      port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: log-output
  type: ClusterIP
status:
  loadBalancer: {}
